[b]Version 0.6.0rc4[/b] (not released yet):

(2008-04-11)
 * Added support for the mouse XButton1 and XButton2. This is untested as
   my mouse doesn't have those buttons.

(2008-04-10)
 * Added in Preferences->General->Video an option to select the default
   deinterlacer. It will be used for new videos opened.

(2008-04-07)
 * Now when a file is added to the playlist, it will get some info about it.
   This allows to display the length and name (if available) in the list.
   Very useful for mp3 and similar.

(2008-04-06)
 * If a file with the same name of the file to play but with extension 
   .edl (or .EDL) exists then smplayer will load it automatically (this can
   be disabled by setting use_edl_files in smplayer.ini to false).
   An edl file allows to skip or mute parts of the video.
   Info about edl files: http://www.mplayerhq.hu/DOCS/HTML/en/edl.html

(2008-04-02)
 * (Bugfix) When using the command line options -send-action or -actions, some
   actions like aspect_4:3 didn't work.

(2008-04-01)
 * Don't check if the items in the recent's menu are local files, as it can
   take a long time if they are not.
 * Compiled with MINI_ARROW_BUTTONS = 0 by default (so reverting changes in
   r1038-r1039).

(2008-03-29)
 * Fix: DVDs started to play at chapter #2 if using mplayer 1.0rc2 or older.
 * Now the default gui will only show two arrow buttons for seeking 
   (rewind 10 secs and forward 10 secs) but if you keep those buttons 
   pressed for a moment a popup menu will show with the rest of the buttons.


[b]Version 0.6.0rc3[/b]:

(2008-03-21)
 * Try to use xv (or directx in windows) if the video driver is not set.
 * Added Play->Jump to, which will show a dialog where you can enter the
   position (time) to jump.

(2008-03-20)
 * Fix: selection of chapters should work again with newer versions of mplayer.
 * Removed the option "Fast seek to chapters in dvds" in 
   Preferences->Performance. Now it will use the fast method if not using